Add set-order api
